force-app/main/default/objects/ZoomMeeting__c/ZoomMeeting__c.object-meta.xml
<CustomObject>
    <description>this object stores the data of zoom meeting</description>
    <label>ZoomMeeting</label>
    <nameField>
        <label>ZoomMeeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomMeetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>