force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingDuration__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingDuration__c</fullName>
    <label>ZoomMeetingDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>