force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingEvent__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingEvent__c</fullName>
    <label>ZoomMeetingEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>