force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingId__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingId__c</fullName>
    <label>ZoomMeetingId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>