force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingJoinUrl__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingJoinUrl__c</fullName>
    <label>ZoomMeetingJoinUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>