force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingStartTime__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingStartTime__c</fullName>
    <label>ZoomMeetingStartTime</label>
    <type>DateTime</type>
</CustomField>