force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingTimeZone__c</fullName>
    <description>The meeting&apos;s time zone.</description>
    <label>ZoomMeetingTimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>