force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingTopic__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingTopic__c</fullName>
    <description>The meeting&apos;s topic.</description>
    <label>ZoomMeetingTopic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>