force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingType__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingType__c</fullName>
    <label>ZoomMeetingType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>