force-app/main/default/objects/ZoomMeeting__c/fields/ZoomMeetingUUID__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeetingUUID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomMeetingUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>